--- a/Task1/flowers.html
+++ b/Task1/flowers.html
@@ -2,8 +2,6 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flowers</title>
 </head>
 
@@ -13,27 +11,22 @@
             <font color="red" size="6">360Digrii</font>
             <font color="black" size="6">Basket</font>
             <br><br>
-            <a href="index.html" style="text-decoration: none; font-size: 20px;">Home</a>&nbsp;
-            <font size="5">|</font>&nbsp;
-            <a href="fruits.html" style="text-decoration: none; font-size: 20px;">Fruits</a>&nbsp;
-            <font size="5">|</font>&nbsp;
-            <a href="#" style="text-decoration: none; font-size: 20px;">Flowers</a>
+            <a href="index.html">Home</a>&nbsp;|&nbsp;
+            <a href="fruits.html">Fruits</a>&nbsp;|&nbsp;
+            <a href="#">Flowers</a>
         </center>
     </header>
     <br>
     <hr>
-    <main style="background-image: url(images/image2.png); background-repeat: no-repeat; background-size: cover;">
-        <h2>List of Flowers</h2>
-        <ul>
-            <font size="5" color="prince">
-                <li>Lilly</li>
-                <li>Rose</li>
-                <li>Jasmine</li>
-            </font>
-        </ul>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    </main>
-
+    <h2>List of Flowers</h2>
+    <ul>
+        <font size="5" color="prince">
+            <li>Lilly</li>
+            <li>Rose</li>
+            <li>Jasmine</li>
+        </font>
+    </ul>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <hr>
     <footer>
         <center>
