--- a/Task1/fruits.html
+++ b/Task1/fruits.html
@@ -2,8 +2,6 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fruits</title>
 </head>
 
@@ -13,28 +11,21 @@
             <font color="red" size="6">360Digrii</font>
             <font color="black" size="6">Basket</font>
             <br><br>
-            <a href="index.html" style="text-decoration: none; font-size: 20px;">Home</a>&nbsp;
-            <font size="5">|</font>&nbsp;
-            <a href="#" style="text-decoration: none; font-size: 20px;">Fruits</a>&nbsp;
-            <font size="5">|</font>&nbsp;
-            <a href="flowers.html" style="text-decoration: none; font-size: 20px;">Flowers</a>
+            <a href="index.html">Home</a>&nbsp;|&nbsp;
+            <a href="#" style=>Fruits</a>&nbsp;|&nbsp;
+            <a href="flowers.html">Flowers</a>
         </center>
     </header>
     <hr>
-    <main style="background-image: url('images/image1.png'); background-size: cover; background-repeat: no-repeat;">
-
-        <h2>List of Fruits</h2>
-        <ol type="A">
-            <font size="5" color="rainbow">
-                <li>Apple</li>
-                <li>Mango</li>
-                <li>Banana</li>
-            </font>
-        </ol>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    </main>
-
-
+    <h2>List of Fruits</h2>
+    <ol type="A">
+        <font size="5" color="rainbow">
+            <li>Apple</li>
+            <li>Mango</li>
+            <li>Banana</li>
+        </font>
+    </ol>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <hr>
     <footer>
         <center>
