--- a/Task1/index.html
+++ b/Task1/index.html
@@ -2,8 +2,6 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
 </head>
 
@@ -14,27 +12,22 @@
             <font color="black" size="6">Basket</font>
             <br>
             <br>
-            <a href="#" style="text-decoration: none; font-size: 20px;">Home</a>&nbsp;
-            <font size="5">|</font>&nbsp;
-            <a href="fruits.html" style="text-decoration: none; font-size: 20px;" font-size="50px">Fruits</a>&nbsp;
-            <font size="5">|</font>&nbsp;
-            <a href="flowers.html" style="text-decoration: none; font-size: 20px;">Flowers</a>
+            <a href="#">Home</a>&nbsp;|&nbsp;
+            <a href="fruits.html">Fruits</a>&nbsp;|&nbsp;
+            <a href="flowers.html">Flowers</a>
         </center>
     </header>
     <br>
     <hr>
-    <main style="background-image: url('images/image.png'); background-size: cover; background-repeat: no-repeat;">
-
-        <p>
-            <font size="4">
-                Order Groceries on 360DigriiBasket.com - Explore wideRange of Products For All your Needs.
-                <br><br>
-                Heavy Discount on 360DigriiBasket.com. Get Irresistible Offers On a Range Of High Quality
-                Grocery Items At 360DigriiBasket.com. Get Low Prices Everyday.
-            </font>
-        </p>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    </main>
+    <p>
+        <font size="4">
+            Order Groceries on 360DigriiBasket.com - Explore wideRange of Products For All your Needs.
+            <br><br>
+            Heavy Discount on 360DigriiBasket.com. Get Irresistible Offers On a Range Of High Quality
+            Grocery Items At 360DigriiBasket.com. Get Low Prices Everyday.
+        </font>
+    </p>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <hr>
     <footer>
         <center>
