--- a/Task5/fruits-gallery.html
+++ b/Task5/fruits-gallery.html
@@ -14,7 +14,8 @@
         <a href="flowers-gallery.html">Flowers Gallery</a> |
         <a href="#">Fruits Gallery</a> |
         <a href="signup.html">Signup</a> |
-        <a href="signin.html">Signin</a>
+        <a href="signin.html">Signin</a> |
+        <a href="video-audio.html">Videos/Audios</a>
     </header>
     <hr>
     <h3>Our Fruits</h3>
