--- a/Task5/signup.html
+++ b/Task5/signup.html
@@ -14,7 +14,8 @@
         <a href="flowers-gallery.html">Flowers Gallery</a> |
         <a href="fruits-gallery.html">Fruits Gallery</a> |
         <a href="#">Signup</a> |
-        <a href="signin.html">Signin</a>
+        <a href="signin.html">Signin</a> |
+        <a href="video-audio.html">Videos/Audios</a>
     </header>
     <hr>
     <h3 align="center">Signup Form</h3>
