--- a/Task5/signin.html
+++ b/Task5/signin.html
@@ -14,7 +14,8 @@
         <a href="flowers-gallery.html">Flowers Gallery</a> |
         <a href="fruits-gallery.html">Fruits Gallery</a> |
         <a href="signup.html">Signup</a> |
-        <a href="#">Signin</a>
+        <a href="#">Signin</a> |
+        <a href="video-audio.html">Videos/Audios</a>
     </header>
     <hr>
     <h3 align="center">Signin Form</h3>
